--- a/BlogposterCMS/apps/designer/assets/scss/designer.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/designer.scss
@@ -1,3 +1,5 @@
+@use '../../../public/assets/scss/variables' as *;
+@use '../../../public/assets/scss/components/grid-mode';
 @use 'variables';
 @use 'header';
 @use 'sidebar';
