--- a/BlogposterCMS/public/assets/scss/components/_grid-mode.scss
+++ b/BlogposterCMS/public/assets/scss/components/_grid-mode.scss
@@ -23,6 +23,12 @@ body.grid-mode {
       touch-action: none;
     }
 
+    .bbox-handle {
+      position: absolute;
+      pointer-events: auto;
+      touch-action: none;
+    }
+
     .bbox-edge.n {
       cursor: ns-resize;
       left: 0;
