--- a/BlogposterCMS/public/assets/scss/pages/_login.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_login.scss
@@ -2,6 +2,12 @@
    Login Page Styles
    ============================================================================= */
 
+@property --user-color {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #FF0000;
+}
+
 
 .app-scope.login-page {
   position: relative;
@@ -9,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: --user-color 5s;
 }
 
 
@@ -24,6 +31,7 @@
   background-size: 20px 20px;
   pointer-events: none;
   z-index: -1;
+  transition: --user-color 5s;
 }
 
 .login-form {
@@ -36,6 +44,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 2px solid var(--user-color);
+  transition: border-color 5s;
 }
 
 .login-form .cms-title {
